[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentreputation"
version = "0.1.0"
description = "Python SDK for AgentTrust — trust scores and reputation for the agent-to-agent economy."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brett Halverson", email = "brett.halverson@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["httpx>=0.26"]
keywords = ["mcp", "agents", "trust", "reputation", "a2a", "agent-to-agent"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet",
]

[project.urls]
Homepage = "https://github.com/bch1212/agenttrust-mcp"
Repository = "https://github.com/bch1212/agenttrust-mcp"
Issues = "https://github.com/bch1212/agenttrust-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["agenttrust"]
